# antichess-engine

./: Cargo.toml  README.md  runmatch.py
opening-gen/: main.rs  opening.rs
perft/: main.rs
src/: error.rs  lib.rs  main.rs
src/chess_game/: chess_move.rs  color.rs  game.rs  mod.rs  piece.rs  pos.rs  square.rs  undo_move.rs  valid_move_finder.rs
src/chess_game/valid_move_finder/: bishop_move_finder.rs  king_move_finder.rs  knight_move_finder.rs  mod.rs  pawn_move_finder.rs  queen_move_finder.rs  rook_move_finder.rs
src/engine/: alpha_beta.rs  evaluate_game.rs  min_max.rs  mod.rs  move_sort.rs  opening.rs  position_scores.rs  random.rs  store.rs
src/game/: color.rs  game.rs  mod.rs  piece.rs  pos.rs  square.rs
src/game/valid_move_finder/: mod.rs
tests/: basic.rs  endgame.rs  piece_capture.rs  unmake_move.rs
