[package]
name = "antichess-engine"
version = "0.1.0"
edition = "2021"
default-run = "antichess-engine"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.15", features = ["derive"] }
rand = "0.8.4"
thiserror = "1.0"
anyhow = "1.0"

[[bin]]
name = "antichess-engine"
path = "src/main.rs"

[[bin]]
name = "opening-gen"
path = "opening-gen/main.rs"

[[bin]]
name = "perft"
path = "perft/main.rs"
